@startuml
title Blockchain and Block - Class Diagram

hide circle
skinparam classAttributeIconSize 0

class Blockchain {
  -blocks: List<Block>
  +size(): int
  +getBlock(index: int): Block
  +getBlocks(): List<Block>
  +getPreciseBalance(walletName: String): BigDecimal
  +addTransactions(txs: List<String>): void
  +validate(): ValidationResult
}

class Block {
  -index: int
  -timestamp: LocalDateTime
  -previousHash: String
  -transactions: List<String>
  -currentHash: String
  +computeCurrentHash(): String
  +hasValidTransactionData(): boolean
}

class ValidationResult {
  -valid: boolean
  -reason: String
  +isValid(): boolean
  +getReason(): String
}

Blockchain "1" *-- "0..*" Block : blocks
Blockchain ..> ValidationResult : returns

note right of Blockchain
Single authority for:
- block append invariants
- full-chain validation
end note

@enduml
